# ft_ality

./: .gitignore  Makefile  TODO.md  dune-project  ft_ality.opam  grammar.txt  main.ml  types.ml
grammar/: grammar.gmr  test2_fail.gmr  test_duplicate_key.gmr  test_duplicate_value.gmr  test_fail.gmr  test_jsp.gmr
lib/: dune
lib/automate/: automate.ml  automate.mli
lib/debug/: debug.ml  debug.mli
lib/game/: inputs.ml  inputs.mli  main_loop.ml  main_loop.mli
lib/parsing/: modif_automate.ml  modif_automate.mli  read_file.ml  read_file.mli  utils.ml  utils.mli
lib/types/: types.ml  types.mli
