(lang dune 3.21)

(name ft_ality)

(generate_opam_files true)

(source
 (github hyyven/ft_ality))

(authors "afont" "haouni")

(package
 (name ft_ality)
 (synopsis "42 project ft_ality")
 (description "automaton thing")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
